<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/PasswordText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_password"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <EditText
            android:id="@+id/PasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_password_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_password_toggle"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/hidePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp">
        <TextView
            android:id="@+id/Tags"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_tags"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/TagsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_tags_hint"
            android:inputType="text"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_submit"
            android:layout_alignParentEnd="true"
            android:id="@+id/button"/>
    </RelativeLayout>
</LinearLayout>
